update to TS current

--- a/src/components/add-to-cart.module.css
+++ b/src/components/add-to-cart.module.css
@@ -3,17 +3,14 @@
   flex-direction: row;
   color: var(--text-color-inverted);
   background-color: var(--primary);
-  align-self: center;
+  align-self: flex-end;
   padding: var(--space-sm) var(--space-xl);
   border-radius: var(--radius-md);
   font-weight: var(--bold);
   align-items: center;
   height: var(--size-input);
-  justify-content:center;
+  justify-content: center;
   transition: var(--transition);
-  width:100%;
-
-  text-align:center;
 }
 
 .addToCart:hover {
