--- a/src/components/check-filter.module.css
+++ b/src/components/check-filter.module.css
@@ -18,7 +18,7 @@
 
 .filter label.selectedLabel {
   font-weight: var(--semibold);
-  color: var(--text-color);
+  color: #FA02B7;
 }
 
 .filter summary {
