--- a/src/components/product-card.module.css
+++ b/src/components/product-card.module.css
@@ -1,5 +1,5 @@
 .productCardStyle {
-  max-width: 100%;
+  max-width: 400px;
   cursor: pointer;
   text-decoration: none;
   padding-bottom: var(--space-md);
