--- a/src/pages/search-page.module.css
+++ b/src/pages/search-page.module.css
@@ -38,7 +38,7 @@
   height: 100vh;
   width: 100vw;
   z-index: 10;
-  background-color: var(--background);
+  background-color: #222;
   overscroll-behavior: contain;
 }
 
@@ -157,6 +157,7 @@
 
 .filterButton.activeFilters {
   color: var(--primary);
+
 }
 
 .filterButton:hover {
