--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1027,20 +1027,21 @@ background:#000;
 }
 ::-webkit-scrollbar-track {
   background: #111;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
-  box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.9); */
 }
 ::-webkit-scrollbar-thumb {
 
-background: #FA02B7;
-background: -moz-linear-gradient(left,  #FA02B7 0%, #fa02b0 60%, #fa02b0 100%);
-background: -webkit-linear-gradient(left,  #FA02B7 0%,#fa02b0 60%,#fa02b0 100%);
-background: linear-gradient(to right,  #FA02B7 0%,#fa02b0 60%,#fa02b0 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fa02b0', endColorstr='#fa02b0',GradientType=1 );
-
-outline: 3px solid #999;
-border:1px solid #777;
-}
+  background: #111;
+  /* background: -moz-linear-gradient(left,  #FA02B7 0%, #fa02b0 60%, #fa02b0 100%);
+  background: -webkit-linear-gradient(left,  #FA02B7 0%,#fa02b0 60%,#fa02b0 100%);
+  background: linear-gradient(to right,  #FA02B7 0%,#fa02b0 60%,#fa02b0 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fa02b0', endColorstr='#fa02b0',GradientType=1 ); */
+  /* 
+  outline: 3px solid #FA02B7; */
+  border:1px solid #FA02B7;
+  }
+  
 
 
 
