--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -486,7 +486,7 @@ display: none;
     position:absolute;
     top:0;
     right:0;
-    z-index: 1;
+    z-index: 0;
     background:#FA02B7;
     color:#fff !important;
     padding:0 1rem;
@@ -817,7 +817,7 @@ blockquote.frontquote {
   width:100vw;
   height:120vh;
   position:fixed;
-  z-index: -1;
+  z-index: 1;
   opacity: 1 ;
   margin:0 auto;
   padding:0;
@@ -1027,21 +1027,26 @@ background:#000;
 }
 ::-webkit-scrollbar-track {
   background: #111;
-  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
-  box-shadow: inset 0 0 6px rgba(0,0,0,0.9); */
+  /* -webkit-box-shadow: inset 0 0 6px rgba(248, 3, 187, 0.9);
+  box-shadow: inset 0 0 6px rgba(248, 3, 187, 0.9); */
+  /* border-left: 1px solid rgba(248, 3, 187, 0.9); */
 }
 ::-webkit-scrollbar-thumb {
 
-  background: #111;
-  /* background: -moz-linear-gradient(left,  #FA02B7 0%, #fa02b0 60%, #fa02b0 100%);
-  background: -webkit-linear-gradient(left,  #FA02B7 0%,#fa02b0 60%,#fa02b0 100%);
-  background: linear-gradient(to right,  #FA02B7 0%,#fa02b0 60%,#fa02b0 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fa02b0', endColorstr='#fa02b0',GradientType=1 ); */
-  /* 
-  outline: 3px solid #FA02B7; */
-  border:1px solid #FA02B7;
-  }
-  
+background: #000;
+/* background: -moz-linear-gradient(left,  #FA02B7 0%, #fa02b0 60%, #fa02b0 100%);
+background: -webkit-linear-gradient(left,  #FA02B7 0%,#fa02b0 60%,#fa02b0 100%);
+background: linear-gradient(to right,  #FA02B7 0%,#fa02b0 60%,#fa02b0 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fa02b0', endColorstr='#fa02b0',GradientType=1 ); */
+/* 
+outline: 3px solid #FA02B7; */
+border:1px solid #222;
+/* -webkit-box-shadow: inset 0 0 6px rgba(248, 3, 187, 0.9); */
+}
+
+
+
+
 
 
 
