up2date-with TS

--- a/src/pages/art/{ShopifyProduct.productType}/product-page.module.css
+++ b/src/pages/art/{ShopifyProduct.productType}/product-page.module.css
@@ -7,6 +7,7 @@
 .container {
   /* padding: var(--size-gutter-raw); */
     padding: 0 3.5vw 0 3.5vw; 
+    background:transparent !important;
 }
 
 .header {
@@ -22,12 +23,12 @@
 
 .productImageWrapper {
   position: relative;
-  padding-bottom: var(--space-2xl);
+  /* padding-bottom: var(--space-2xl); */
 }
 
 .productImageList {
   display: flex;
-  overflow-x: auto;
+  /* overflow-x: auto; */
 }
 
 .productImageListItem {
@@ -78,16 +79,17 @@
 }
 
 .optionsWrapper {
-  display: grid;
+  display: flex;
   grid-template-columns: var(--product-grid);
   gap: var(--space-lg);
   padding-bottom: var(--space-lg);
 }
 
 .addToCartStyle {
-  display: grid;
+  /* display: grid; */
   grid-template-columns: min-content 1fr;
   gap: var(--space-lg);
+  margin:0 auto;
 }
 
 .selectVariant {
@@ -102,7 +104,7 @@
 .selectVariant select {
   appearance: none;
   background-color: #000;
-  border: none;
+  border: 1px solid #FA02B7 !important;
   color: var(--input-text);
   cursor: inherit;
   font-size: var(--text-md);
