--- a/src/components/toast.module.css
+++ b/src/components/toast.module.css
@@ -3,8 +3,8 @@
   color: var(--text-color-inverted);
   width: max-content;
   position: fixed;
-  right: 80px;
-  top: 10px;
+  right: 10vw;
+  top: 77vh;
   padding: var(--space-md) var(--space-lg);
   font-size: var(--text-xs);
   font-weight: var(--semibold);
