--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1312,11 +1312,11 @@ border:1px solid #222;
         background-position:center 50px;
     
         } */
-
+ 
 .intro{border:0px solid orange !important;}
 
         body.homepage .intro:before{
-          content: "A Pioneer In Night Photography";
+          content: "A Fetish For Decay";
         position:fixed;
    left:0;
    top:0;
