--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -523,7 +523,7 @@ display: none;
   position:relative;
   }
   
- .listingContainerStyle a:first-child:after, .listingContainerStyle a:nth-child(11n-8):after{
+ /* .listingContainerStyle a:first-child:after, .listingContainerStyle a:nth-child(11n-8):after{
   
     content: " Just Sold ";
     color:#222 !important;
@@ -540,7 +540,7 @@ display: none;
     filter: drop-shadow(0px 0px 10px rgba(0,0,0,.9));
     justify-content: center;
     text-align:center;
-  }
+  } */
 
   .nft .listingContainerStyle a:first-child:after, .nft .listingContainerStyle a:nth-child(11n-8):after{
     /* border:4px solid red !important; */
