--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -371,7 +371,7 @@ height:0;
 
 
 
-.mobilefix{ margin:-5rem 0 30px 0; z-index:1; position:relative;}
+.mobilefix{ margin:-120px 0 30px 0; z-index:1; position:relative;}
 
 .flexbutt {display:flex; }
 
